# zapiski-ai-openai-api

./: .example.env  .flake8  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/: auth.py  config.py  database.py  graphql_schema.py  main.py  models.py  openai_service.py  schemas.py  util.py
